@@ -1,0 +1,15 @@
+@comment $NetBSD: PLIST,v 1.1 2007/08/06 00:33:06 smb Exp $
+lib/claws-mail/plugins/attachwarner.la
+share/locale/ca/LC_MESSAGES/attachwarner.mo
+share/locale/cs/LC_MESSAGES/attachwarner.mo
+share/locale/de/LC_MESSAGES/attachwarner.mo
+share/locale/es/LC_MESSAGES/attachwarner.mo
+share/locale/fi/LC_MESSAGES/attachwarner.mo
+share/locale/fr/LC_MESSAGES/attachwarner.mo
+share/locale/hu/LC_MESSAGES/attachwarner.mo
+share/locale/it/LC_MESSAGES/attachwarner.mo
+share/locale/pl/LC_MESSAGES/attachwarner.mo
+share/locale/pt_BR/LC_MESSAGES/attachwarner.mo
+share/locale/sk/LC_MESSAGES/attachwarner.mo
+share/locale/sr/LC_MESSAGES/attachwarner.mo
+@dirrm lib/claws-mail/plugins
