@@ -1,0 +1,5 @@
+$NetBSD: distinfo,v 1.1 2007/08/06 00:33:06 smb Exp $
+
+SHA1 (attachwarner-0.2.7.tar.gz) = c525a3fde4707bb0ce011897ff5c5ab11416c44d
+RMD160 (attachwarner-0.2.7.tar.gz) = 2f536b77c4354b66d7f643539f0f75ecbbf2b8e6
+Size (attachwarner-0.2.7.tar.gz) = 381665 bytes
