@@ -1,0 +1,2 @@
+This plugin saves the caches every 60 seconds (or user-defined period). It
+helps avoiding the loss of metadata on crashes.
