@@ -1,0 +1,5 @@
+$NetBSD: distinfo,v 1.1 2007/08/06 00:33:07 smb Exp $
+
+SHA1 (cachesaver-0.10.5.tar.gz) = cf430e7911662aaa75466930b61a00ef0a0d2b79
+RMD160 (cachesaver-0.10.5.tar.gz) = ef7bbfa2b0ea0b166d1c700f8c37a329e59766c8
+Size (cachesaver-0.10.5.tar.gz) = 324614 bytes
