@@ -1,0 +1,3 @@
+@comment $NetBSD: PLIST,v 1.1 2007/08/06 00:33:08 smb Exp $
+lib/claws-mail/plugins/fetchinfo_plugin.la
+@dirrm lib/claws-mail/plugins
