@@ -1,0 +1,17 @@
+@comment $NetBSD: PLIST,v 1.1 2007/08/06 00:33:09 smb Exp $
+lib/claws-mail/plugins/rssyl.la
+share/locale/ca/LC_MESSAGES/rssyl.mo
+share/locale/cs/LC_MESSAGES/rssyl.mo
+share/locale/de/LC_MESSAGES/rssyl.mo
+share/locale/es/LC_MESSAGES/rssyl.mo
+share/locale/fi/LC_MESSAGES/rssyl.mo
+share/locale/fr/LC_MESSAGES/rssyl.mo
+share/locale/hu/LC_MESSAGES/rssyl.mo
+share/locale/it/LC_MESSAGES/rssyl.mo
+share/locale/pl/LC_MESSAGES/rssyl.mo
+share/locale/pt_BR/LC_MESSAGES/rssyl.mo
+share/locale/sk/LC_MESSAGES/rssyl.mo
+share/locale/sr/LC_MESSAGES/rssyl.mo
+share/locale/sv/LC_MESSAGES/rssyl.mo
+share/locale/zh_CN/LC_MESSAGES/rssyl.mo
+@dirrm lib/claws-mail/plugins
